fixing no wrap on characters

--- a/star_wars/starwars.css
+++ b/star_wars/starwars.css
@@ -68,6 +68,7 @@ button {
 #gallery {
   color: #161940;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
   padding: 10px;
